# jmpio-python

./: .gitignore  README.md  pyproject.toml  ruff.toml  setup.py
examples/: roundtrip.py  simple.py
src/: __init__.py  column.py  constants.py  metadata.py  reader.py  types.py  utils.py  writer.py
src/jmpio/: __init__.py  column.py  constants.py  metadata.py  reader.py  types.py  utils.py  writer.py
src/jmpio.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_reader.py  test_utils.py  test_writer.py
tests/test_data/: char.jmp
